force-app/main/default/objects/Benefit_Asset__c/Benefit_Asset__c.object-meta.xml
<CustomObject>
    <label>Activo de actividad</label>
    <nameField>
        <label>Benefit Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activos de actvidades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>