force-app/main/default/objects/Benefit_Asset__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Asset.Status</field>
            <operation>equals</operation>
            <value>Instalado</value>
        </filterItems>
        <filterItems>
            <field>Asset.ParentId</field>
            <operation>equals</operation>
            <value>NULL</value>
        </filterItems>
        <filterItems>
            <field>Asset.LocationId</field>
            <operation>equals</operation>
            <valueField>$Source.Location__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Benefit Assets</relationshipLabel>
    <relationshipName>Benefit_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>