force-app/main/default/objects/Benefit_Asset__c/fields/Benefit__c.field-meta.xml
<CustomField>
    <fullName>Benefit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit</label>
    <referenceTo>Benefit</referenceTo>
    <relationshipLabel>Benefit Assets</relationshipLabel>
    <relationshipName>Benefit_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>