force-app/main/default/objects/Benefit_Asset__c/fields/Completo__c.field-meta.xml
<CustomField>
    <fullName>Completo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completo</label>
    <type>Checkbox</type>
</CustomField>