force-app/main/default/objects/Benefit_Asset__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Activos de actvidades</relationshipLabel>
    <relationshipName>Activos_de_actvidades</relationshipName>
    <type>Lookup</type>
</CustomField>