force-app/main/default/objects/Benefit_Asset__c/fields/Ocupaci_n__c.field-meta.xml
<CustomField>
    <fullName>Ocupaci_n__c</fullName>
    <label>Ocupación</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>