force-app/main/default/objects/Benefit_Asset__c/fields/Programaci_n_de_Actividad_CINA__c.field-meta.xml
<CustomField>
    <fullName>Programaci_n_de_Actividad_CINA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Calendario Actividad</label>
    <referenceTo>BenefitSchedule</referenceTo>
    <relationshipLabel>Benefit Assets</relationshipLabel>
    <relationshipName>Benefit_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>