force-app/main/default/objects/Benefit_Asset__c/fields/Tripulantes__c.field-meta.xml
<CustomField>
    <fullName>Tripulantes__c</fullName>
    <formula>Asset__r.Tripulantes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacidad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>